--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -135,7 +137,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+report/.env
 .envrc
 .venv
 env/
